examples/test/testpolicy12907.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12907
  namespace: namespace185
spec:
  podSelector:
    matchLabels:
      key34: value34
      key4: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value30
          key39: value19
      podSelector:
        matchLabels:
          key0: value41
          key29: value35
